--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -18,7 +18,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
             <ImageView
                 android:id="@+id/fragment_person_img"
                 android:layout_width="match_parent"
@@ -34,6 +35,7 @@
                 android:gravity="center_vertical"
                 android:padding="20dp">
                 <Button
+                    android:id="@+id/fragment_person_btn_one"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="1"
@@ -46,6 +48,7 @@
                     android:layout_height="50dp"
                     android:background="#D2D2D2"/>
                 <Button
+                    android:id="@+id/fragment_person_btn_two"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -58,6 +61,7 @@
                     android:layout_height="50dp"
                     android:background="#D2D2D2"/>
                 <Button
+                    android:id="@+id/fragment_person_btn_three"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -73,23 +77,29 @@
                 android:layout_centerInParent="true"
                 android:background="@drawable/default_two"
                 />
-            <TextView
-                android:id="@+id/fragment_person_view"
-                android:layout_width="2dp"
-                android:layout_height="15dp"
-                android:layout_marginLeft="5dp"
-                android:background="#3C4042"
-                android:layout_alignParentBottom="true"
-                />
-            <TextView
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="我收藏的活动"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/fragment_person_view"
                 android:layout_alignParentBottom="true"
-                android:paddingBottom="10dp"
-                />
+                >
+                <TextView
+                    android:id="@+id/fragment_person_view"
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:background="#3C4042"
+                    android:layout_alignParentBottom="true"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="我收藏的活动"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/fragment_person_view"
+                    android:layout_centerVertical="true"
+                    />
+            </RelativeLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -101,7 +111,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_below="@id/fragment_person_relativelayout_one">
+                android:layout_below="@id/fragment_person_relativelayout_one"
+                android:background="#F6F6F6">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
