--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -42,6 +42,7 @@
                     android:drawableTop="@drawable/ic_person_order"
                     android:text="我预定的"
                     android:background="#00FFFFFF"
+                    android:onClick="click"
                     />
                 <View
                     android:layout_width="1dp"
@@ -55,6 +56,7 @@
                     android:background="#00FFFFFF"
                     android:drawableTop="@drawable/ic_person_interest"
                     android:text="兴趣标签"
+                    android:onClick="click"
                     />
                 <View
                     android:layout_width="1dp"
@@ -68,6 +70,7 @@
                     android:background="#00FFFFFF"
                     android:drawableTop="@drawable/ic_person_setting"
                     android:text="设置"
+                    android:onClick="click"
                     />
             </LinearLayout>
             </LinearLayout>
